[package]
name = "demo-lyquid"
version = "0.1.0"
edition = "2024"
authors = ["Cloud Deploy Demo"]
description = "Demo Lyquid project for recording the Cloud Deploy MVP flow"

[dependencies]
lyquid = { version = "0.0.1", features = ["ldk"], git = "ssh://git@github.com/lyquor-labs/ldk.git" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "debuginfo"
debug = false

[workspace]
