[package]
name = "lyquid-deployer"
version = "0.1.0"
edition = "2024"
authors = ["Lyquor"]
description = "Cloud Deploy Lyquid that exposes off-chain build and on-chain deploy methods."

[dependencies]
lyquid = { path = "../../../../../.shakenup/ldk/lyquid", features = ["ldk"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "debuginfo"
debug = false

[workspace]
